# Remote-Controlled-Surveillance-Vehicle

./: .gitignore  Automatic Surveillance Vehicle.py  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_MANIFEST.txt  README.md  SECURITY.md  UPLOAD_TO_GITHUB.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
arduino/servo_controller/: servo_controller.ino
assets/: README.md
docs/: ARCHITECTURE.md  HARDWARE_SETUP.md  PROJECT_WALKTHROUGH.md  REPOSITORY_SETUP.md  TROUBLESHOOTING.md
legacy/: automatic_surveillance_vehicle.py
src/surveillance_vehicle/: __init__.py  cli.py  controller.py  geometry.py  serial_io.py
tests/: test_geometry.py
